--- a/Meeting/2022.01.10.md
+++ b/Meeting/2022.01.10.md
@@ -13,3 +13,5 @@
 > 4. 오늘 해야할 프로젝트 업무
 > - 두용 : IOT 아두이노 프로젝트 공부 (개발 및 과정), 무선통신 
 > - 준호 : IOT 아두이노 프로젝트 공부 (개발 및 과정), 무선통신
+> 
+> 5. 금일 자정까지 보고서 제출 
