--- a/Meeting/2022.01.14.md
+++ b/Meeting/2022.01.14.md
@@ -10,8 +10,9 @@
 <br>
 
 ###### 확인사항 및 공부해야할 부분 
-> 1. 
-> 2.
-> 3.
-> 4.
-> 
+> 1. node red 로 아두이노(라즈베리파이) 통신해서, 라즈베리 필요 없이, PC로 바로 데이터 전송할 수 있는지 확인 
+> 2. 화면 구축해서 어떤 서비스 로드맵  
+
+<br> 
+
+###### 발표 준비 2022.01.18 화요일 ( pre-mid presentation )
