--- a/Meeting/2022.02.09.md
+++ b/Meeting/2022.02.09.md
@@ -2,7 +2,24 @@
 ## 2022.02.29 Tuesday project meeting 
  
  
-### IEEE paper 진행사항 
+### 1. IEEE paper 진행사항 
+
+- Literature review 선행 논문 검토 진행하였음. 2월 2주차 금요일까지, 퍼듀대학교 Zhang이 
+
+### 2. 하드웨어 진행사항 
+
+- 미세먼지 센서 왔고 센서 값 잘 들어오는 거 확인 
+- CO(일산화탄소), Pb(납), No2(이산화질소), Ozone, PM10(미세먼지), PM2.5(초미세먼지), SO2(이산화항)  (EPA 제공) 
+- 현재 자체 하드웨어 측정 가능한 성분 CO, So2, PM10, PM 2.5, temperature, humidity
 
 
-### 하드웨어 진행사항 
+> 기준 설정 (중간발표 피드백 사항) 
+>
+> 어떤 성분이 공기질이라고 정의하는가? 그 이유는? 
+> 미세먼지, 일산화탄소, 폼알데하이드, 이산화탄소, 총부유세균 
+
+
+
+### To do list
+- 두용 : Zhang에게 선행논문 검색시에 미국 정부에서는 실내공기 측정에서 중요한 성분으로 어떤 성분을 중요시 하는지 찾아달라고 요청하기. 
+- 준호 : 성분 중에 공기질이라고 정의되는 성분 명확하게 하고, 근거 자료 수집 / EPA  각 성분 단위 확인 
