--- a/Meeting/2022.02.09.md
+++ b/Meeting/2022.02.09.md
@@ -30,4 +30,4 @@
 ### To do list
 - 두용 : Zhang에게 선행논문 검색시에 미국 정부에서는 실내공기 측정에서 중요한 성분으로 어떤 성분을 중요시 하는지 찾아달라고 요청하기. 
 - 준호 : 성분 중에 공기질이라고 정의되는 성분 명확하게 하고, 근거 자료 수집 / EPA  각 성분 단위 확인 / tony 교수님한테  co2(option), no2, so2, pb, ozon 센서 가지고 계신지 연락드리기,  
-- Mics-4515 이산화질소 no2 센서 필요함. DGS-SO2 센서 필요함.
+- Mics-4515 이산화질소 no2 센서 필요함. DGS-SO2 센서 필요함. Grove-Hcho 성분 필요 
