--- a/Meeting/2022.02.13.md
+++ b/Meeting/2022.02.13.md
@@ -9,6 +9,6 @@
 - aurduino ide, node red 
 
 ### To do list
-- 두용 : 요약 및 서론 introduction reference 
-- 준호 : realated work 작성 
+- 두용 : 요약 및 서론 introduction reference , 다른 IEEE 논문 피드백 업 
+- 준호 : system disign 부분과 methology 부분 작성 시작 
 - https://gradschoolstory.net/tag/%EB%85%BC%EB%AC%B8-%EC%93%B0%EA%B8%B0/ (논문 작성 참조 사이트) 
